--- a/development/frontend/src/components/DefaultHeader.css
+++ b/development/frontend/src/components/DefaultHeader.css
@@ -47,7 +47,7 @@
   }
 
   .logOutDefault {
-    border: 2px solid rgb(68, 19, 47);
+    /* border: 2px solid rgb(68, 19, 47); */
     display: flex;
     font-size: 3vmax;
     margin-left: 87vw;
