--- a/development/frontend/src/pages/InitialLanding.css
+++ b/development/frontend/src/pages/InitialLanding.css
@@ -2,10 +2,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@1,400;1,700&display=swap");
 
 @media only screen and (min-width: 821px) {
-  .initialLandingBox {
+  /* .initialLandingBox {
     display: flex;
     justify-content: center;
-  }
+  } */
 
   .initialLandingContainer {
     border: 2px solid black;
@@ -97,10 +97,10 @@
 }
 
 @media only screen and (max-width: 820px) {
-  body {
+  /* body {
     background-color: #f7f1f0;
     color: #2b2b2e;
-  }
+  } */
 
   .initialLandingContainer {
     /* border: 2px solid black; */
@@ -191,14 +191,14 @@
 }
 
 @media only screen and (max-width: 767px) {
-  body {
+  /* body {
     background-color: #f7f1f0;
     color: #2b2b2e;
-  }
+  } */
 
   .initialLandingContainer {
-    border: 2px solid black;
-    background: #df0054;
+    /* border: 2px solid black; */
+    background: #f7f1f0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -218,7 +218,7 @@
   }
 
   .initialLandingTitleArea img {
-    height: 400px;
+    height: 350px;
   }
 
   /* .initialLandingSlogan {
@@ -236,15 +236,15 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    top: -3.5vmax;
+    top: -7vmax;
   }
 
   .initialLandingLogin button {
     background-color: #bf1858;
     border: none;
     color: white;
-    width: 25vmin;
-    height: 7vmin;
+    width: 30vmin;
+    height: 10vmin;
     padding: 10px 20px;
     text-align: center;
     text-decoration: none;
@@ -264,12 +264,12 @@
     justify-content: center;
     align-items: center;
     position: fixed;
-    top: 5vmax;
+    top: 0vmax;
     background: #ffebcd;
     /* background: #f6eabc; */
     position: relative;
-    width: 900px;
-    height: 450px;
+    width: 600px;
+    height: 270px;
     border-radius: 50%;
     overflow: hidden;
   }
@@ -280,6 +280,6 @@
     justify-content: center;
   }
   .initialLandingovalBackgroundImg img {
-    width: 70%;
+    width: 60%;
   }
 }
