--- a/development/frontend/src/pages/place/css/Map.css
+++ b/development/frontend/src/pages/place/css/Map.css
@@ -51,16 +51,16 @@
     font-size: 1.3vmax;
   }
 
-  .goListPage button {
+  .goListPage {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 2.5vmax;
+    font-size: 2vmax;
   }
 
   .searchTrigger button,
   .categoryTrigger button,
-  .goListPage button {
+  .goListPage {
     background-color: #f6eabc;
     border: none;
     border-radius: 50px;
@@ -89,8 +89,8 @@
     padding: 0 1% 0 1%;
   }
 
-  .mantine-17do188,
-  .mantine-Checkbox-body {
+  .districtCategoryCheckBox,
+  .typeCategoryCheckBox {
     border: 2px solid rgb(255, 99, 169);
     border-radius: 15px;
     width: 100px;
@@ -149,45 +149,66 @@
   }
 
   .previewCardArea {
-    border: 3px solid black;
-    background-color: #f6eabc;
-    width: 23vmax;
-    height: 15vmax;
+    /* border: 3px solid black; */
+    background-color: #000000;
+    width: 33%;
+    height: 10vmax;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     border-radius: 30px;
     position: fixed;
-    bottom: 4vmax;
+    bottom: 5vmax;
     z-index: 10000;
+    overflow: hidden;
   }
 
-  .mantine-xoj88x {
-    padding: 0;
-    overflow: visible;
-    background-color: rgba(255, 255, 255, 0);
-  }
-
-  .cardSection {
+  .previewPlaceCard {
+    /* border: 3px solid rgb(255, 238, 0); */
     display: flex;
-    justify-content: center;
-    border: 2px solid black;
-    border-radius: 20px;
-    width: 13vmax;
+    height: 100%;
+    width: 30vw;
   }
 
-  .previewPicture2 {
-    border-radius: 20px;
-    height: 25vmin;
+  .previewPlaceCardPicture {
+    /* border: 3px solid rgb(245, 245, 245); */
+    display: flex;
+    height: 100%;
+  }
+
+  .previewPlaceCardPicture img {
+    height: 100%;
+  }
+
+  .previewPlaceCardInfo {
+    /* border: 2px solid white; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-left: 1%;
+  }
+
+  .cardTitle {
+    /* border: 2px solid rgb(255, 255, 255); */
+    width: 13.7vw;
+    color: rgb(255, 200, 0);
+    font-size: 20px;
+    font-weight: bold;
+  }
+
+  .cardType {
+    /* border: 2px solid rgb(255, 255, 255); */
+    width: 13.7vw;
+    color: rgb(255, 200, 0);
+    font-size: 20px;
+    font-weight: bold;
   }
 
   .closeCardButton {
-    border: 2px solid black;
+    border: none;
+    border-radius: 500%;
     display: flex;
     position: absolute;
+    left: 2%;
     top: 5%;
-    right: 5%;
     z-index: 100;
   }
 }
@@ -249,12 +270,16 @@
     font-size: 3vmax;
   }
 
-  .goListPage button {
+  .goListPage {
     border: none;
+    border-radius: 50px;
+    background-color: #f6eabc;
+    height: 4vh;
+    width: 10vw;
     display: flex;
-    align-items: center;
     justify-content: center;
-    font-size: 5vmin;
+    align-items: center;
+    font-size: 3vmax;
   }
 
   .searchTrigger button,
@@ -291,14 +316,15 @@
     padding: 0 1% 0 1%;
   }
 
-  .mantine-17do188,
-  .mantine-Checkbox-body {
+  .districtCategoryCheckBox,
+  .typeCategoryCheckBox {
     border: 2px solid rgb(255, 99, 169);
     border-radius: 15px;
     width: 100px;
     height: 50px;
     display: flex;
     align-items: center;
+    justify-content: center;
   }
 
   .categoryContainerButton {
@@ -350,45 +376,66 @@
   }
 
   .previewCardArea {
-    border: 3px solid black;
-    background-color: #f6eabc;
-    width: 50vw;
-    height: 22vh;
+    /* border: 3px solid black; */
+    background-color: #000000;
+    width: 55%;
+    height: 13%;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     border-radius: 30px;
     position: fixed;
-    bottom: 9.5vmax;
+    bottom: 10%;
     z-index: 10000;
+    overflow: hidden;
   }
 
-  .mantine-xoj88x {
-    padding: 0;
-    overflow: visible;
-    background-color: rgba(255, 255, 255, 0);
-  }
-
-  .cardSection {
+  .previewPlaceCard {
+    /* border: 3px solid rgb(255, 238, 0); */
     display: flex;
-    justify-content: center;
-    border: 2px solid black;
-    border-radius: 20px;
-    width: 13vmax;
+    height: 100%;
+    width: 100%;
   }
 
-  .previewPicture2 {
-    border-radius: 20px;
-    height: 25vmin;
+  .previewPlaceCardPicture {
+    /* border: 3px solid rgb(245, 245, 245); */
+    display: flex;
+    height: 100%;
+  }
+
+  .previewPlaceCardPicture img {
+    height: 100%;
+  }
+
+  .previewPlaceCardInfo {
+    /* border: 2px solid white; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-left: 1%;
+  }
+
+  .cardTitle {
+    /* border: 2px solid rgb(255, 255, 255); */
+    width: 18vw;
+    color: rgb(255, 200, 0);
+    font-size: 20px;
+    font-weight: bold;
+  }
+
+  .cardType {
+    /* border: 2px solid rgb(255, 255, 255); */
+    width: 13.7vw;
+    color: rgb(255, 255, 255);
+    font-size: 20px;
+    font-weight: bold;
   }
 
   .closeCardButton {
-    border: 2px solid black;
+    border: none;
+    border-radius: 500%;
     display: flex;
     position: absolute;
-    top: 5%;
-    right: 0.7%;
+    left: 3%;
+    top: 8%;
     z-index: 100;
   }
 }
@@ -496,8 +543,8 @@
     padding: 0 1% 0 1%;
   }
 
-  .mantine-17do188,
-  .mantine-Checkbox-body {
+  .districtCategoryCheckBox,
+  .typeCategoryCheckBox {
     border: 2px solid rgb(255, 99, 169);
     border-radius: 15px;
     width: 22vw;
@@ -554,45 +601,66 @@
   }
 
   .previewCardArea {
-    border: 3px solid black;
-    background-color: #f6eabc;
-    width: 70vw;
-    height: 20vh;
+    /* border: 3px solid black; */
+    background-color: #000000;
+    width: 80%;
+    height: 13%;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     border-radius: 30px;
     position: fixed;
-    bottom: 10.5vmax;
+    bottom: 11%;
     z-index: 10000;
+    overflow: hidden;
   }
 
-  .mantine-xoj88x {
-    padding: 0;
-    overflow: visible;
-    background-color: rgba(255, 255, 255, 0);
-  }
-
-  .cardSection {
+  .previewPlaceCard {
+    /* border: 3px solid rgb(255, 238, 0); */
     display: flex;
-    justify-content: center;
-    border: 2px solid black;
-    border-radius: 20px;
-    width: 13vmax;
+    height: 100%;
+    width: 100%;
   }
 
-  .previewPicture2 {
-    border-radius: 20px;
-    height: 29vmin;
+  .previewPlaceCardPicture {
+    /* border: 3px solid rgb(245, 245, 245); */
+    display: flex;
+    height: 100%;
+  }
+
+  .previewPlaceCardPicture img {
+    height: 100%;
+  }
+
+  .previewPlaceCardInfo {
+    /* border: 2px solid white; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-left: 1%;
+  }
+
+  .cardTitle {
+    /* border: 2px solid rgb(255, 255, 255); */
+    width: 35vw;
+    color: rgb(255, 200, 0);
+    font-size: 20px;
+    font-weight: bold;
+  }
+
+  .cardType {
+    /* border: 2px solid rgb(255, 255, 255); */
+    width: 35vw;
+    color: rgb(255, 255, 255);
+    font-size: 20px;
+    font-weight: bold;
   }
 
   .closeCardButton {
-    border: 2px solid black;
+    border: none;
+    border-radius: 500%;
     display: flex;
     position: absolute;
-    top: 5%;
-    right: 5%;
+    left: 3%;
+    top: 8%;
     z-index: 100;
   }
 }
