--- a/development/frontend/src/components/place/list/PlaceCard.css
+++ b/development/frontend/src/components/place/list/PlaceCard.css
@@ -22,6 +22,13 @@
     width: 100%;
     height: 100%;
   }
+
+  .previewPicture img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
   .info {
     /* border: 3px solid rgb(140, 0, 255); */
     /* border-radius: 0 20px 20px 0; */
@@ -89,6 +96,12 @@
   .previewPicture {
     width: 100%;
     height: 100%;
+  }
+
+  .previewPicture img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .info {
@@ -163,6 +176,12 @@
   .previewPicture {
     width: 100%;
     height: 100%;
+  }
+
+  .previewPicture img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .info {
