--- a/development/frontend/src/pages/place/css/PlaceDetail.css
+++ b/development/frontend/src/pages/place/css/PlaceDetail.css
@@ -243,7 +243,7 @@
     flex-direction: column;
     padding: 2%;
     position: sticky;
-    top: 10px;
+    top: 5%;
     height: 100%;
     width: 35%;
   }
@@ -399,7 +399,7 @@
     position: sticky;
     top: 10px;
     height: 100%;
-    width: 35%;
+    width: 40%;
   }
 
   .placeDetailName {
